--- a/task0002/zchen9/css/task0002_4.css
+++ b/task0002/zchen9/css/task0002_4.css
@@ -1,66 +1,69 @@
 *{
-	margin: 0;
-	padding: 0;
-	border: none;
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+body{
+    font-family: 'Microsoft Yahei', sans-serif;
 }
 
 /*task0002_4*/
 
 .search{
-	position: relative;
+    position: relative;
     
-	width: 250px;
-	margin-top: 5%;
-	margin-left: 5%;
+    width: 250px;
+    margin-top: 5%;
+    margin-left: 5%;
 }
 
 .s-icon{
-	position: absolute;
-	right: 4px;
-	top: 4px;
+    position: absolute;
+    right: 4px;
+    top: 4px;
 
-	width: 32px;
-	height: 32px;
+    width: 32px;
+    height: 32px;
 
-	cursor: pointer;
-	background-image: url("../img/icon-search.png");
+    cursor: pointer;
+    background-image: url("../img/icon-search.png");
 }
 
 #s-input{
-	position: absolute;
-	left: 0;
+    position: absolute;
+    left: 0;
 
-	width: 100%;
-	height: 38px;
+    width: 100%;
+    height: 38px;
 
-	font-size: 18px;
-	line-height: 18px;
-	text-indent: .5em;
+    font-size: 18px;
+    line-height: 18px;
+    text-indent: .5em;
 
     outline: none;
-	background-color: #FFF;
-	border: 1px solid #CCC;
+    background-color: #FFF;
+    border: 1px solid #CCC;
 }
 #s-input:focus{
-	border: 1px solid #2AD595;
+    border: 1px solid #2AD595;
 }
 .suggest ul{
-	position: absolute;
-	top: 40px;
+    position: absolute;
+    top: 40px;
 
-	width: 100%;
+    width: 100%;
 
-	list-style: none;
-	border: 1px solid #2AD595;
+    list-style: none;
+    border: 1px solid #2AD595;
 }
 .suggest ul li{
-	font-size: 16px;
-	line-height: 30px;
-	text-indent: .5em;
-	cursor: pointer;
+    font-size: 16px;
+    line-height: 30px;
+    text-indent: .5em;
+    cursor: pointer;
 }
 
 #s-result .selected{
-	color: #FFF;
-	background-color: #2AD595;
+    color: #FFF;
+    background-color: #2AD595;
 }
