--- a/task0002/zchen9/css/task0002_5.css
+++ b/task0002/zchen9/css/task0002_5.css
@@ -1,28 +1,31 @@
 * {
-	margin: 0;
-	padding: 0;
-	border: none;
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+body{
+    font-family: 'Microsoft Yahei', sans-serif;
 }
 
 /*task0002_5*/
 .box{
-	float: left;
-	overflow: hidden;
+    float: left;
+    overflow: hidden;
 
-	width: 200px;
-	min-height: 450px;
-	margin: 20px 30px;
+    width: 200px;
+    min-height: 450px;
+    margin: 20px 30px;
 
-	border: 2px solid #000;
-	list-style: none;
+    border: 2px solid #000;
+    list-style: none;
 }
 .block{
-	width: 198px;
-	height: 70px;
+    width: 198px;
+    height: 70px;
 
-	background-color: #2AD595;
-	border: 1px solid #000;
+    background-color: #2AD595;
+    border: 1px solid #000;
 }
 .dragging{
-	background-color: rgba(0,255,255,.5);
+    background-color: rgba(0,255,255,.5);
 }
