--- a/task0002/zchen9/css/task0002_2.css
+++ b/task0002/zchen9/css/task0002_2.css
@@ -8,6 +8,11 @@ body{
 
 /*task0002_2*/
 
+section{
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
 .ask{
     display: block;
     padding: 20px 0;
