--- a/task0003/zchen9/css/todo.shell.css
+++ b/task0003/zchen9/css/todo.shell.css
@@ -14,6 +14,11 @@ html,body {
 	margin: 0 5px;
 }
 
+.fa-2x{
+	line-height: 45px;
+	font-size: 1.3em;
+}
+
 i.fa-remove{
 	display: none;
 	float: right;
@@ -66,6 +71,7 @@ header .todo-title{
 	min-width: 250px;
 	height: 100%;
 	overflow: hidden;
+	z-index: 99;
 }
 
 .todo-category > a,
@@ -158,6 +164,7 @@ header .todo-title{
 /*todo_spec*/
 
 .todo-spec{
+	position: relative;
 	display: block;
 	margin-left: -56%;
 	height: 100%;
@@ -167,13 +174,26 @@ header .todo-title{
 	height: 45px;
 	line-height: 45px;
 	text-indent: 2em;
-	width: 100%;
+	z-index: 1;
 }
+.todo-spec-title > input,
+.todo-spec-time > input{
+	display: inline-block;
+	height: 30px;
+	line-height: 30px;
+	width: 8%;
+	background: transparent;
+	border: none;
+	outline: none;
+}
+
 .todo-spec-edit{
-	float: right;
-	margin-right: 2em;
+	position: absolute;
+	right: 0;
+	margin-right: 1em;
 }
 .todo-spec-edit > i{
+	float: right;
 	cursor: pointer;
 }
 
@@ -183,18 +203,27 @@ header .todo-title{
 	line-height: 45px;
 }
 
+
 .todo-spec-content{
 	overflow: hidden;
 	height: 100%;
 	margin-top: -90px;
 }
 
+.todo-spec-content > p{
+	margin-top: 90px;
+	padding-top: 1em;
+	padding-left: 2em;
+}
+
 .todo-spec-content > textarea{
 	font-size: 16px;
-	padding: 2em;
+	padding-top: 1em;
+	padding-left: 2em;
 	resize: none;
-	width: 85%;
-	height: 100%;
+	width: 580px;
+	overflow-y: hidden;
+	height: 90%;
 	margin-top: 90px;
 	border: none;
 	outline: none;
