--- a/task0003/zchen9/css/todo.shell.css
+++ b/task0003/zchen9/css/todo.shell.css
@@ -228,9 +228,14 @@ header .todo-title{
 }
 
 .todo-spec-content > p{
+	color: #E58193;
 	margin-top: 90px;
-	padding-top: 1em;
+	padding-top: 2em;
 	padding-left: 2em;
+}
+
+.todo-spec-content i{
+	margin-right: 9px;
 }
 
 .todo-spec-content > textarea{
