--- a/task0003/zchen9/css/todo.shell.css
+++ b/task0003/zchen9/css/todo.shell.css
@@ -74,6 +74,7 @@ header .todo-title{
 /*todo_container*/
 
 .todo-container{
+	position: relative;
 	width: 100%;
 	height: 90%;
 	min-height: 450px;
@@ -260,4 +261,65 @@ header .todo-title{
 	margin-top: 90px;
 	border: none;
 	outline: none;
+}
+
+/*addCatePanel*/
+.add-cate-panel{
+	display: none;
+	width: 400px;
+	height: 180px;
+	padding: 10px;
+	z-index: 999;
+	border-radius: 15px;
+	box-shadow: 2px 2px 5px #333;
+}
+.add-cate-panel > h3{
+	text-align: center;
+	font-weight: 600;
+	font-size: 1.4em;
+	line-height: 2em;
+	color: #294B7C;
+}
+.add-cate-panel ul{
+	margin-top: 10px;
+	margin-left: 60px;
+}
+.add-cate-panel li{
+	padding: 5px;
+}
+.add-cate-panel label{
+	display: inline;
+	width: 100px;
+	margin-right: 15px;
+}
+.add-cate-panel select,
+.add-cate-panel input{
+	border: none;
+	outline: none;
+	height: 20px;
+	width: 155px;
+	border-radius: 3px;
+}
+.add-cate-btn{
+	margin-top: 18px;
+	margin-left: 28%;
+}
+.add-cate-btn > span{
+	display: inline-block;
+	text-align: center;
+	width: 75px;
+	height: 27px;
+	margin: 0 5px;
+	line-height: 27px;
+	border-radius: 3px;
+	background-color: #294B7C;
+	color: #FFF;
+	cursor: pointer;
+}
+.add-cate-btn > span:hover{
+	background-color: #FFF;
+	color: #294B7C;
+}
+.add-cate-btn > span>i{
+	margin-right: 6px;
 }
