--- a/task0004/zchen9/css/todo.shell.css
+++ b/task0004/zchen9/css/todo.shell.css
@@ -58,7 +58,7 @@ header {
     min-height: 60px;
 }
 
-header a {
+.todo-icon {
     position: absolute;
     top: 0;
     display: block;
@@ -69,7 +69,7 @@ header a {
     background: url(../img/icon-logo.png);
 }
 
-header .todo-title {
+.todo-title {
     display: block;
     line-height: 60px;
     margin-left: 90px;
