--- a/task0004/zchen9/css/todo.mobile.css
+++ b/task0004/zchen9/css/todo.mobile.css
@@ -9,7 +9,7 @@
 @media (max-width: 768px){
     header {
         width: 100%;
-        height: 100%;
+        height: 150%;
         z-index: 999999;
 
         -webkit-transition: height .4s ease-out;
@@ -103,6 +103,7 @@
         height: 20px;
         overflow: hidden;
         border-radius: 5px;
+        z-index: 999999;
 
         -webkit-transform:rotate(45deg);
            -moz-transform:rotate(45deg);    
