--- a/task0004/zchen9/css/todo.mobile.css
+++ b/task0004/zchen9/css/todo.mobile.css
@@ -9,7 +9,7 @@
 @media (max-width: 768px){
     header {
         width: 100%;
-        height: 150%;
+        height: 1500px;
         z-index: 999999;
 
         -webkit-transition: height .4s ease-out;
@@ -20,6 +20,7 @@
     .todo-head {
         display: none;
         width: 100%;
+        padding-top: 5px;
         height: 60px;
         line-height: 60px;
     }
@@ -177,6 +178,9 @@
 }
 
 @media (max-width: 640px){
+    header {
+        height: 1024px;
+    }
     .todo-icon {
         margin-left: 25%;
     }
