--- a/task0004/zchen9/css/todo.shell.css
+++ b/task0004/zchen9/css/todo.shell.css
@@ -56,6 +56,12 @@ header {
     width: 100%;
     height: 10%;
     min-height: 60px;
+
+    -webkit-transition: height .4s ease-out;
+       -moz-transition: height .4s ease-out;
+        -ms-transition: height .4s ease-out;
+         -o-transition: height .4s ease-out;
+            transition: height .4s ease-out;
 }
 
 .todo-icon {
