--- a/task0004/zchen9/css/todo.shell.css
+++ b/task0004/zchen9/css/todo.shell.css
@@ -56,12 +56,41 @@ header {
     width: 100%;
     height: 10%;
     min-height: 60px;
+}
 
-    -webkit-transition: height .4s ease-out;
-       -moz-transition: height .4s ease-out;
-        -ms-transition: height .4s ease-out;
-         -o-transition: height .4s ease-out;
-            transition: height .4s ease-out;
+.todo-start {
+    display: block;
+    height: 100%;
+    padding-top: 22%;
+
+    text-align: center;
+
+    opacity: 1;
+    z-index: 999999;
+
+    -webkit-transition: height .4s ease-out, padding .8s ease, opacity 1.5s ease;
+       -moz-transition: height .4s ease-out, padding .8s ease, opacity 1.5s ease;
+        -ms-transition: height .4s ease-out, padding .8s ease, opacity 1.5s ease;
+         -o-transition: height .4s ease-out, padding .8s ease, opacity 1.5s ease;
+            transition: height .4s ease-out, padding .8s ease, opacity 1.5s ease;
+}
+
+.todo-start-icon {
+    display: block;
+    width: 114px;
+    height: 114px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    background-image: url(../img/todo.png);
+}
+
+.todo-start > h1{
+    padding: 10px 2px;
+    font-size: 1.8em;
+}
+
+.todo-start span{
+    font-size: 1.1em;
 }
 
 .todo-icon {
